tests/paczka1/fuzzy1/51214990.err
Error in line 4: S891 A132 33,0
Error in line 2: 88JHWfQPG S447 11,9
Error in line 12: zdb7nWpn9J S181 33,2
Error in line 22: CyXO7o6 A132 89,9
Error in line 36: 88JHWfQPG S891 20,6
